front-end/src/assets/css/general.css
/* ... */
.side-menu {
  height: 100vh;
  font-size: 2.5rem;
}

.side-menu ul {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.side-menu ul a {
  text-decoration: none;
  display: flex;
  justify-content: center;
  margin-top: 8px;
  color: black;
  padding: 5px 0;
}

.side-menu ul a:hover {
  background: #fc766a;
}

.side-menu ul a:hover {
  color: white;
}

/* Properties */

.properties-list {
  display: flex;
  flex-wrap: wrap;
  max-width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}

.properties-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.property-card {
  display: flex;
  width: 25%;
  border: 1px black solid;
  padding: 10px;
  margin: 10px;
  flex-wrap: wrap;
  flex-direction: row;
}

.buttons-container {
  display: flex;
}

.noteInfo {
  padding: 10px;
}

@media (max-width: 800px) {
  .properties-container {
    flex-direction: column;
  }
}

/* Top Bar */

.top-bar {
  display: flex;
  flex-direction: column;
  box-shadow: 0 5px 2px -2px rgba(192, 191, 191, 0.589);
  background-color: rgba(252, 120, 105, 1);
  padding: 10px;
  order: 2;
  height: 200px;
}

.top-bar a button {
  background-color: white;
  border: none;
  color: black;
  margin-left: 10px;
  border-radius: 5px;
  padding: 8px;
}

/* Menu */

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  margin: 0;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  line-height: 1.3;
}

.Header {
  /* max-width: 1200px;
  position: fixed;
  width: 100%;
  z-index: 100;
  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1); */
  position: fixed;
	width: 100%;
	padding: 50px 0;
	z-index: 100;
	transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
}

.Header .login-button-menu {
  padding: 8px 20px;
	font-size: 20px;
	border: none;
	background-color: white;
	border: 1px solid #fc766a;
	color: black;
	font-weight: 700;
	border-radius: 10px;
	outline: none;
	cursor: pointer;
	transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
}

.Header .login-button-menu:hover {
	background-color: #fc766a;
	color: white;
}

.Header .register-button-menu {
  padding: 8px 20px;
	font-size: 20px;
	border: none;
	background-color: #fc766a;
	color: white;
	font-weight: 700;
	border-radius: 10px;
	outline: none;
	cursor: pointer;
  transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
}


.HeaderScrolled {
  /* background: rgba(0,0,0, 0.8); */
  background: white;
  padding: 15px 0;
  backdrop-filter: blur(20px);
}

.HeaderGroup {
  max-width: 800px;
	margin: 0 auto;
	display: grid;
	grid-template-columns: repeat(5, auto);
	align-items: center;
	justify-items: center;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
		"Helvetica Neue", sans-serif;
}

.Header p {
  color: black;
  
}

.Header a:link {
  text-decoration: none;
}

.menu-options button {
  padding: 5px 10px;
  border: none;
  background-color: #fc766a;
  font-size: 2.1rem;
  color: white;
  font-weight: 700;
  border-radius: 10px;
  outline: none;
  transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
  
}

.menu-options button:hover {
  background: white;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
  transform: translateY(-3px);
  color: gray;
}

.menu-options p:hover {
  color: gray;
  
}

.menu-options p {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
  "Helvetica Neue", sans-serif;
  font-weight: 700;
}

.logo {
  width: 25%;
}

.logo img {
  width: 100%;
}
.menu-options {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  overflow: hidden;
}

.menu-options p {
  padding: 0.4em;
}

.menu-icon {
  display: none;
}

.toggle {
  display: block;
}

.narrow {
  display: none;
}

@media (max-width: 650px) {
  .narrow {
    display: flex;
    flex-direction: column;
    width: 100%;
  }
  .icon-burger {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .menu-icon {
    display: block;
    /* background-color: #fc766a; */
    float: right;
    cursor: pointer;
    margin-right: 10px;
  }

  .responsive {
    display: none;
  }

  .logo {
    width: 45%;
  }
  .narrow-responsive {
    display: block;
    text-align: center;
    background: white;
    padding: 15px 0;
    opacity: 0.9;
  }
  .narrow-responsive p:hover {
    color: white;
    border-top: #050a27 solid 0.5px;
    border-bottom: #050a27 solid 0.5px;
    background-color: #fc766a;
  }
  .hide-menu {
    display: none;
  }
}

/* Hero */
/* .Hero {
  /* display: flex;
  flex-direction: column;
  /* background: url("../images/wallpaper9.png"); */
  /* height: 920px; */ 
  /* min-height: 100vh;

 
} */
 

.intro-section {
	position: relative;
	min-height: 100vh;
  text-align: center;
}



.bg-stretch {
	position: absolute;
	z-index: 1;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-size: cover;
	background-repeat: no-repeat;
  background-position: 50% 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.intro-section .bg-stretch {
	width: 100%;
    /* height: 100vh; */
    background-image: url("../images/wallpaper9.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    
}

/* 
.HeroGroup {
  margin: 0 auto;
  text-align: center;
  width: 100%;
  height: 100%;
  border: 1px solid red;
} */

@media (max-width: 1023px) {
  .intro-section {
		padding-top: 50px;
	}

}

@media (max-width: 479px) {
  .intro-section {
		min-height: 60vw;
		padding-top: 40px;
  }
  
  .intro-section .slide-frame .text h1 {
    display:none;
  }

  .intro-section .slide-frame .text p {
    display:none;

  }
  
  .intro-section .slide-frame .text button {
    display:none;

  }
  .anchor-wrap {
    margin-bottom: -65px;
  }

  


}
/* ... */

